@@ -1,4 +1,4 @@
-.TH @CAPPNAME@ 6 2012-08-31 "Red Eclipse 1.3" "Red Eclipse Manual"
+.TH @CAPPNAME@ 6 2012-09-11 "Red Eclipse 1.3" "Red Eclipse Manual"
 
 
 .SH NAME
@@ -100,7 +100,10 @@ Output log to
 .IR logfile .
 Path is set relative to
 .IR homedir
-unless a leading \'\fB/\fR' is used
+unless a leading \'\fB/\fR' is used, uses stdout if
+.B -g
+is given without a parameter. Defaults to
+.IR log.txt .
 
 .SS Video options
 
